<resources>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="accept">接受</string>
    <string name="com_facebook_device_auth_instructions">请访问&lt;b&gt;facebook.com/device&lt;/b&gt;并输入以上验证码。</string>
    <string name="com_facebook_image_download_unknown_error">下载图片时出现意外错误。</string>
    <string name="com_facebook_internet_permission_error_message">WebView 登录需要访问网络</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest 错误</string>
    <string name="com_facebook_like_button_liked">赞了</string>
    <string name="com_facebook_like_button_not_liked">赞</string>
    <string name="com_facebook_loading">正在加载...</string>
    <string name="com_facebook_loginview_cancel_action">取消</string>
    <string name="com_facebook_loginview_log_in_button">登录</string>
    <string name="com_facebook_loginview_log_in_button_continue">前往 Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">使用 Facebook 登录</string>
    <string name="com_facebook_loginview_log_out_action">注销</string>
    <string name="com_facebook_loginview_log_out_button">注销</string>
    <string name="com_facebook_loginview_logged_in_as">登录身份：%1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">已通过 Facebook 登录</string>
    <string name="com_facebook_send_button_text">发送</string>
    <string name="com_facebook_share_button_text">分享</string>
    <string name="com_facebook_smart_device_instructions">要关联帐户，请在移动设备上打开 Facebook 应用并查看通知。</string>
    <string name="com_facebook_smart_device_instructions_or">- 或 -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">不是你？</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">以%1$s的身份继续</string>
    <string name="com_facebook_smart_login_confirmation_title">确认登录</string>
    <string name="com_facebook_tooltip_default">应用分享内容由你掌控。</string>
    <string name="common_google_play_services_enable_button">启用</string>
    <string name="common_google_play_services_enable_text">您必须先启用 Google Play 服务，然后才能运行%1$s。</string>
    <string name="common_google_play_services_enable_title">启用 Google Play 服务</string>
    <string name="common_google_play_services_install_button">安装</string>
    <string name="common_google_play_services_install_text">您的设备没有安装 Google Play 服务，因此无法运行%1$s。</string>
    <string name="common_google_play_services_install_title">获取 Google Play 服务</string>
    <string name="common_google_play_services_notification_ticker">Google Play服务出错</string>
    <string name="common_google_play_services_unknown_issue">%1$s无法访问 Google Play 服务，请重试。</string>
    <string name="common_google_play_services_unsupported_text">您的设备不支持 Google Play 服务，因此无法运行%1$s。</string>
    <string name="common_google_play_services_update_button">更新</string>
    <string name="common_google_play_services_update_text">您必须先更新 Google Play 服务，然后才能运行%1$s。</string>
    <string name="common_google_play_services_update_title">更新 Google Play 服务</string>
    <string name="common_google_play_services_updating_text">Google Play 服务当前正在更新，因此您无法运行%1$s。</string>
    <string name="common_google_play_services_wear_update_text">必须使用新版 Google Play 服务。该服务很快就会自行更新。</string>
    <string name="common_open_on_phone">在手机上打开</string>
    <string name="common_signin_button_text">登录</string>
    <string name="common_signin_button_text_long">使用 Google 帐号登录</string>
    <string name="create_calendar_message">允许广告创建日历活动吗？</string>
    <string name="create_calendar_title">创建日历活动</string>
    <string name="debug_menu_ad_information">广告信息</string>
    <string name="debug_menu_creative_preview">广告素材预览</string>
    <string name="debug_menu_title">选择调试模式</string>
    <string name="debug_menu_troubleshooting">问题排查</string>
    <string name="decline">拒绝</string>
    <string name="messenger_send_button_text">发送</string>
    <string name="search_menu_title">搜索</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">允许广告将图片存储在图库中吗？</string>
    <string name="store_picture_title">保存图片</string>
    <string name="AUD">澳元</string>
    <string name="CAD">加元</string>
    <string name="CHF">瑞士法郎</string>
    <string name="CNY">人民币</string>
    <string name="EUR">欧元</string>
    <string name="GBP">英镑</string>
    <string name="HKD">港币</string>
    <string name="JPY">日元</string>
    <string name="KRW">韩币</string>
    <string name="USD">美元</string>
    <string name="a_minute_ago">一分钟以前</string>
    <string name="about_ok">确定</string>
    <string name="account_local_mode">离线模式</string>
    <string name="account_permiss">您的联系人权限未开启</string>
    <string name="action_bar_done">完成</string>
    <string name="action_mode_select">选中%1$s项</string>
    <string name="activity_not_found">没有邮件应用!</string>
    <string name="add_alert">添加提醒</string>
    <string name="add_portfolio_hint">输入投资组合名称</string>
    <string name="add_stock_wait_search">正在查询，请稍后…</string>
    <string name="add_stocks_positon_exist">股票已经存在: %1$s</string>
    <string name="add_to">添加到...</string>
    <string name="add_to_shares">添加到模拟持仓</string>
    <string name="after_hours">盘后</string>
    <string name="againLoad">重新加载</string>
    <string name="alert_info">确定要清除搜索记录吗？</string>
    <string name="alert_menu_name">股价提醒</string>
    <string name="alert_setting">提醒</string>
    <string name="alert_setup_label">提醒设置</string>
    <string name="alerts_create_your_alert_in_stock_details_page">请去详情页面设置股票提醒</string>
    <string name="alerts_menu_name">股价提醒</string>
    <string name="alerts_message_menu_name">消息中心</string>
    <string name="an_hour_ago">一小时以前</string>
    <string name="analysis_income">收入</string>
    <string name="annual">年度</string>
    <string name="app_name">买牛</string>
    <string name="appearance_setting">外观</string>
    <string name="ask_bid">新增买卖盘口</string>
    <string name="ask_bid_detail">一档深度报价及挂单量</string>
    <string name="assets">资产</string>
    <string name="back">返回</string>
    <string name="balance_sheet">资产负债</string>
    <string name="billion">十亿</string>
    <string name="book_value">每股净资产</string>
    <string name="btn_add">添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_save">保存</string>
    <string name="buy">Buy</string>
    <string name="calendar">财经日历</string>
    <string name="calendar_actual">今值</string>
    <string name="calendar_annual">@string/annual</string>
    <string name="calendar_fore_eps">EPS预期: </string>
    <string name="calendar_forecast">预期</string>
    <string name="calendar_prev_eps">EPS前值:</string>
    <string name="calendar_previous">前值</string>
    <string name="calendar_quarterty">@string/quarterly</string>
    <string name="can_not_rename">无法重命名不存在的股票</string>
    <string name="cancel">取消</string>
    <string name="capital">成交分布</string>
    <string name="capital_today">今日资金成交分布</string>
    <string name="cash_flow">现金流表</string>
    <string name="cash_flow_header">现金流</string>
    <string name="change_percent_above">日涨幅超</string>
    <string name="change_percent_blow">日跌幅超</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="clear_success">已成功清除搜索历史</string>
    <string name="close_sync_dialog_message">确定关闭谷歌财经同步？</string>
    <string name="commission">手续费</string>
    <string name="commodity">@string/search_commodity</string>
    <string name="config_widget_label">配置窗口小部件</string>
    <string name="content_empty">没有数据</string>
    <string name="content_loading">加载中</string>
    <string name="context_menu_delete">删除</string>
    <string name="context_menu_delete_portfolio">删除投资组合</string>
    <string name="context_menu_rename">重命名</string>
    <string name="current_ratio">流动比率</string>
    <string name="data_is_empty">数据为空</string>
    <string name="debt_ratio">债务股本比</string>
    <string name="debt_to_assets">负债率</string>
    <string name="delete">删除</string>
    <string name="detail_get_real_time_quotes">获取多伦多交易所Last Sale行情</string>
    <string name="detail_morningstar_ating">晨星评级</string>
    <string name="detail_stock_status_a">已收盘,</string>
    <string name="detail_stock_status_b">休市,</string>
    <string name="detail_stock_status_c">集合竞价,</string>
    <string name="detail_stock_status_d">已收盘,</string>
    <string name="detail_stock_status_e">休市,</string>
    <string name="detail_stock_status_f">未开盘,</string>
    <string name="detail_stock_status_h">未开盘,</string>
    <string name="detail_stock_status_m">午间休市,</string>
    <string name="detail_stock_status_p">停牌,</string>
    <string name="detail_stock_status_s">未开盘,</string>
    <string name="detail_stock_status_t">交易中,</string>
    <string name="detail_stock_status_w">未开盘,</string>
    <string name="detail_tse_btn_subscrib">Last Sale %s</string>
    <string name="detail_tse_btn_time">/月</string>
    <string name="detail_tse_desc">当前为延时15分钟报价，如需多伦多交易所实时报价，请购买多伦多交易所Last Sale行情</string>
    <string name="detail_tse_expiration_date">有效期至：</string>
    <string name="detail_tse_real_time_quotes">多伦多交易所实时报价</string>
    <string name="detail_tse_subscribed">您已购买多伦多交易所Last Sale行情</string>
    <string name="detail_tse_title">多伦多交易所延时报价</string>
    <string name="details">详情</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_reset">重新设置</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_content_collecting_logs">正在收集日志…</string>
    <string name="dialog_content_confirm_send_log">你希望把错误日志发送给我们以帮助我们改进产品吗?</string>
    <string name="dialog_delete">刪除</string>
    <string name="dialog_delete_all_transaction_message">删除该交易信息会同时删除当前的股票记录，希望删除吗?</string>
    <string name="dialog_delete_share_transaction_title">删除股票和交易记录</string>
    <string name="dialog_delete_transaction_message">确定要删除该交易信息吗?</string>
    <string name="dialog_delete_transaction_title">删除交易记录</string>
    <string name="dialog_feedback_without">不希望</string>
    <string name="dialog_feedback_yes">好</string>
    <string name="dialog_insert_shares_title">新增持仓</string>
    <string name="dialog_message_delete_alert">确定要删除选中的提醒?</string>
    <string name="dialog_message_delete_alerts">确定要删除选中的提醒?</string>
    <string name="dialog_message_delete_portfolio">删除投资组合会同时删除其下的所有股票记录，确定删除吗？</string>
    <string name="dialog_message_delete_position">确定要删除选中的股票?</string>
    <string name="option_menu_settings">设置</string>
    <string name="preferences_purchase">高级行情</string>
    <string name="preferences_title_feedback">反馈</string>
    <string name="preferences_title_rate_app">评价</string>
    <string name="shares">模拟持仓</string>
    <string name="drawer_item_help">帮助</string>
    <string name="drawer_item_wallet">我的钱包</string>
    <string name="navigation_drawer_customer_service">客服中心</string>
</resources>