<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_1">
        <!--<item-->
            <!--android:actionProviderClass="fm.stocks.ui.main.MessageActionProvider"-->
            <!--android:id="@+id/menu_message"-->
            <!--android:showAsAction="ifRoom" />-->
        <item
            android:icon="@drawable/ic_high_market"
            android:id="@+id/menu_subscription"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_purchase"
            android:visible="false" />
        <item
            android:icon="@drawable/ic_vector_menu_mywallet"
            android:id="@+id/mywallet"
            app:showAsAction="ifRoom"
            android:title="@string/drawer_item_wallet" />
    </group>
    <group
        android:id="@+id/group_2">
        <item
            android:icon="@drawable/ic_vector_menu_holdings"
            android:id="@+id/menu_shares"
            app:showAsAction="ifRoom"
            android:title="@string/shares" />
        <item
            android:icon="@drawable/ic_vector_menu_alert"
            android:id="@+id/menu_alert"
            app:showAsAction="ifRoom"
            android:title="@string/alerts_menu_name" />
    </group>
    <group
        android:id="@+id/group_3">
        <item
            android:icon="@drawable/ic_vector_menu_settings"
            android:id="@+id/menu_setting"
            app:showAsAction="always"
            android:title="@string/option_menu_settings" />
        <item
            android:icon="@drawable/ic_vector_menu_feedback"
            android:id="@+id/menu_feedback"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_title_feedback" />
        <item
            android:icon="@drawable/iv_vector_service"
            android:id="@+id/menu_service"
            app:showAsAction="ifRoom"
            android:title="@string/navigation_drawer_customer_service"
            android:visible="false" />
        <item
            android:icon="@drawable/iv_vector_help"
            android:id="@+id/menu_helper"
            app:showAsAction="ifRoom"
            android:title="@string/drawer_item_help" />
        <item
            android:icon="@drawable/ic_vector_menu_rate"
            android:id="@+id/menu_rate"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_title_rate_app" />
    </group>
</menu>